# adaptive-experimentation

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/workflows/: ci.yml
docs/: api.md  concepts.md  constraints.md  design-philosophy.md  examples.md  faq.md  glossary.md  guardrails.md  how_to_use_safely.md  index.md  strategies.md  thompson_sampling.md
examples/: control_loop_file.py  control_loop_http.py  end_to_end.py  mock_http_service.py  multi_window.py  streaming_control_loop.py
src/adaptive_experimentation/: __init__.py  engine.py  explanations.py  guardrails.py  types.py  validation.py
src/adaptive_experimentation/integrations/: __init__.py  control_loop.py  protocols.py
src/adaptive_experimentation/strategies/: base.py  heuristic.py  heuristic_strategy.py  registry.py  thompson_strategy.py
tests/: test_api_contract.py  test_constraints_presets.py  test_control_loop.py  test_deterministic_thompson.py  test_engine_heuristic.py  test_engine_thompson.py  test_explanation_serialization.py  test_guardrails.py  test_heuristic.py  test_smoke.py  test_thompson_strategy.py  test_validation.py
