[project]
name = "adaptive-experimentation"
version = "0.0.0"
description = "A safe, infrastructure-agnostic engine for adaptive traffic allocation in experimentation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Rohit Sharma" }]
dependencies = []

[project.urls]
Repository = "https://github.com/rohitsh26/adaptive-experimentation"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adaptive_experimentation"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []